--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,11 +2,11 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host: 127.0.0.1
+    database_host: ored.myd.infomaniak.com
     database_port: ~
-    database_name: symfony
-    database_user: root
-    database_password: ~
+    database_name: administration
+    database_user: ored_cotrin_pro
+    database_password: sitesbdd30112017
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.project_dir%/var/data/data.sqlite'
 
