--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -39,3 +39,9 @@ monolog:
 
 #swiftmailer:
 #    delivery_addresses: ['me@example.com']
+swiftmailer:
+    transport:  gmail
+    host: smtp.gmail.com
+    username:
+    password:  
+    spool:     { type: memory }
