--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,13 +7,14 @@ security:
 
     # https://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     encoders:
-        AppBundle\Entity\User:
-            algorithm: bcrypt
+        FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
         ROLE_ADMIN: [ROLE_USER, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
+        fos_userbundle:
+            id: fos_user.user_provider.username
         main:
             entity:
                 class: AppBundle\Entity\User
@@ -36,18 +37,25 @@ security:
             provider: main
             logout_on_user_change: true
             form_login:
-                login_path: login
-                check_path: login
+                provider: fos_userbundle
+                csrf_token_generator: security.csrf.token_manager
+            logout:       true
+            anonymous:    true
+#                login_path: login
+#                check_path: login
 #                csrf_token_generator: security.csrf.token_manager
 #                csrf_parameter: _csrf_security_token
 #                csrf_token_id: a_private_string
-                default_target_path: index
-                always_use_default_target_path: true
-            logout:
-                path:   /logout
-                target: /login
+#                default_target_path: index
+#                always_use_default_target_path: true
+#            logout:
+#                path:   /logout
+#                target: /login
 
     access_control:
-                - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#                - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+                - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+                - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+                - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
                 - { path: ^/inscription, roles: ROLE_ADMIN }
                 - { path: ^/, roles: ROLE_USER }
