--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,10 +20,10 @@ fos_user:
         sender_name: administration
     registration:
         confirmation:
-            enabled: false
-#            from_email:
-#                address:        registration@example.com
-#                sender_name:    Registration
+            enabled: true
+            from_email:
+                address:        registration@example.com
+                sender_name:    Registration
 #            template:   FOSUserBundle:Registration:email.txt.twig
     resetting:
         email:
