--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,6 +41,10 @@ security:
                 csrf_token_generator: security.csrf.token_manager
             logout:       true
             anonymous:    true
+            remember_me:
+                secret: '%secret%'
+                lifetime: 604800
+                path: /
 #                login_path: login
 #                check_path: login
 #                csrf_token_generator: security.csrf.token_manager
