--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -58,8 +58,7 @@ security:
 
     access_control:
 #                - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-                - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-                - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-                - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-                - { path: ^/inscription, roles: ROLE_ADMIN }
+                - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+                - { path: ^/resetting, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+                - { path: ^/register, role: ROLE_ADMIN }
                 - { path: ^/, roles: ROLE_USER }
