--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,3 +37,34 @@ services:
     AppBundle\Services\ImageUpload:
         arguments:
             $targetDir: '%reviews_directory%'
+
+
+    AppBundle\Controller\:
+        resource: '../../src/AppBundle/Controller'
+        autowire: true
+#    AppBundle\Controller\ProfileController:
+#        tags: ['controller.service_arguments']
+#        calls:
+#            - [setContainer, ["@service_container"]]
+#        bind:
+#            $formFactory: "@fos_user.profile.form.factory"
+    AppBundle\Controller\RegistrationController:
+        class: AppBundle\Controller\RegistrationController
+        autowire: true
+        tags: ['controller.service_arguments']
+        arguments:
+            $formFactory: '@fos_user.registration.form.factory'
+#        calls:
+#            - [setContainer, ["@service_container"]]
+#        bind:
+#        $formFactory: "@fos_user.registration.form.factory"
+# default service configuration
+
+#    App\:
+#        resource: '../../src/*'
+#        exclude: '../../src/{Entity,Migrations,Tests,Controller/RegistrationController}'
+#
+#    App\Controller\:
+#        resource: '../../src/Controller'
+#        tags: ['controller.service_arguments']
+#        exclude: '../../src/Controller/RegistrationController'
