--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -174,3 +174,7 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+#assetic:
+#  debug:          '%kernel.debug%'
+#  use_controller: '%kernel.debug%'
