--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -60,5 +60,5 @@ security:
 #                - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
                 - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
                 - { path: ^/resetting, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-                - { path: ^/register, role: ROLE_ADMIN }
+                - { path: ^/register, roles: ROLE_ADMIN }
                 - { path: ^/, roles: ROLE_USER }
