--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -39,22 +39,22 @@ services:
             $targetDir: '%reviews_directory%'
 
 
-    AppBundle\Controller\:
-        resource: '../../src/AppBundle/Controller'
-        autowire: true
+#    AppBundle\Controller\:
+#        resource: '../../src/AppBundle/Controller'
+#        autowire: true
 #    AppBundle\Controller\ProfileController:
 #        tags: ['controller.service_arguments']
 #        calls:
 #            - [setContainer, ["@service_container"]]
 #        bind:
 #            $formFactory: "@fos_user.profile.form.factory"
-    AppBundle\Controller\RegistrationController:
-        class: AppBundle\Controller\RegistrationController
-        autowire: true
-        tags: ['controller.service_arguments']
-        arguments:
-            $formFactory: '@fos_user.registration.form.factory'
-#        calls:
+#    AppBundle\Controller\RegistrationController:
+#        class: AppBundle\Controller\RegistrationController
+#        autowire: true
+#        tags: ['controller.service_arguments']
+#        arguments:
+#            $formFactory: '@fos_user.registration.form.factory'
+##        calls:
 #            - [setContainer, ["@service_container"]]
 #        bind:
 #        $formFactory: "@fos_user.registration.form.factory"
@@ -68,3 +68,9 @@ services:
 #        resource: '../../src/Controller'
 #        tags: ['controller.service_arguments']
 #        exclude: '../../src/Controller/RegistrationController'
+#    AppBundle\Controller\ChangePasswordController:
+#        class: AppBundle\Controller\ChangePasswordController
+#        autowire: true
+#        tags: ['controller.service_arguments']
+#        arguments:
+#            $formFactory: '@fos_user.change_password.form.factory'
