--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,7 +10,10 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_USER, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_WEBMARKETING: [ROLE_USER, ROLE_COMMERCIAL, ROLE_COMMUNICATION, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_COMMERCIAL: [ROLE_USER, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_COMMUNICATION: [ROLE_USER, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_ADMIN: [ROLE_COMMUNICATION, ROLE_COMMERCIAL, ROLE_USER, ROLE_WEBMARKETING, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
         fos_userbundle:
@@ -18,16 +21,8 @@ security:
         main:
             entity:
                 class: AppBundle\Entity\User
-                #property: username
-                # if you're using multiple entity managers
-                # manager_name: customer
-    firewalls:
 
-#        secured_area:
-#            form_login:
-#                csrf_token_generator: security.csrf.token_manager
-#                csrf_parameter: _csrf_security_token
-#                csrf_token_id: a_private_string
+    firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -45,20 +40,17 @@ security:
                 secret: '%secret%'
                 lifetime: 604800
                 path: /
-#                login_path: login
-#                check_path: login
-#                csrf_token_generator: security.csrf.token_manager
-#                csrf_parameter: _csrf_security_token
-#                csrf_token_id: a_private_string
-#                default_target_path: index
-#                always_use_default_target_path: true
-#            logout:
-#                path:   /logout
-#                target: /login
 
     access_control:
-#                - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
                 - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
                 - { path: ^/resetting, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+                - { path: ^/register/confirmed, roles: ROLE_USER }
                 - { path: ^/register, roles: ROLE_ADMIN }
+                - { path: ^/news, roles: ROLE_COMMUNICATION }
+                - { path: ^/models, roles: ROLE_COMMUNICATION }
+                - { path: ^/sliders, roles: ROLE_COMMUNICATION }
+                - { path: ^/reviews, roles: ROLE_COMMUNICATION }
+                - { path: ^/agencies, roles: ROLE_COMMERCIAL }
+                - { path: ^/sectors, roles: ROLE_COMMERCIAL }
+                - { path: ^/departments, roles: ROLE_COMMERCIAL }
                 - { path: ^/, roles: ROLE_USER }
