--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -38,6 +38,11 @@ services:
         arguments:
             $targetDir: '%reviews_directory%'
 
+    app.form.registration:
+        class: AppBundle\Form\RegistrationType
+        tags:
+            - { name: form.type, alias: app_user_registration }
+
 
 #    AppBundle\Controller\:
 #        resource: '../../src/AppBundle/Controller'
