--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,18 +2,28 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host: ored.myd.infomaniak.com
-    database_port: ~
-    database_name: administration
-    database_user: ored_cotrin_pro
-    database_password: sitesbdd30112017
-    # You should uncomment this if you want to use pdo_sqlite
-    #database_path: '%kernel.project_dir%/var/data/data.sqlite'
+    database_name_admin: administration
+    database_user_admin : root
+    database_password_admin: null
 
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: ~
     mailer_password: ~
+    secret: fa16c6901b60299d261abc9ff9388b4458637d9b
 
-    # A secret key that's used to generate certain security-related tokens
-    secret: ThisTokenIsNotSoSecretChangeIt
+    database_port: ~
+    database_host: localhost
+    database_user: root
+    database_password: null
+
+    database_name_tradybel: ored_tradybel
+    database_name_creavilla: ored_creavilla
+    database_name_esquiss: ored_esquiss
+    database_name_maisonscevi: ored_maisonscevi
+    database_name_voiron: ored_voiron
+
+    # You should uncomment this if you want to use pdo_sqlite
+    #database_path: '%kernel.project_dir%/var/data/data.sqlite'
+
+
